--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ main:
     - npm run build
     - cd docs/wallet/
     - git init
-    - git branch gh-pages
+    - git branch -- gh-pages
     - git checkout gh-pages
     - git add .
     - git commit -m 'Commit'
