--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,5 @@ main:
     - git checkout --orphan gh-pages
     - git add .
     - git commit -m 'Commit'
-    - git remote add origin https://nao20010128nao:$TOKEN@github.com/nao20010128nao/nyaan-wallet.git
+    - git remote add origin https://nao20010128nao:$GITHUB_TOKEN@github.com/nao20010128nao/nyaan-wallet.git
     - git push -f -u origin gh-pages
