--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ main:
   script:
     - npm i
     - npm run build || npm run build || npm run build || npm run build
-    - [ -e docs/wallet/dist ]
+    - "[ -e docs/wallet/dist ]"
   after_script:
     - cd docs/wallet/
     - git init
